--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,13 @@
 
 }
 
+
+
+body::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+
+
 html {
 
   scroll-behavior: smooth;
@@ -84,6 +91,61 @@ header {
 
   text-align: justify;
   font-weight: 400;
-  font-family: cursive;
+  font-family: monospace;
+
+}
+
+.btn-read{
+
+  background-color: #000 !important;
+  border: 1px solid #fff !important;
+  color: #fff !important;
+  padding: 0.8rem 4rem 0.8rem 4rem !important;
+  transition: all ease-in-out 0.3s !important;
+  font-weight: 600 !important;
+
+
+}
+
+.btn-read:hover{
+
+  background-color: transparent !important;
+  border: 1px solid #000 !important;
+  color: #000 !important;
+
+
+}
+
+.mission h3{
+
+  font-weight: 700;
+  
+
+}
+
+.mission p{
+
+  font-weight: 400;
+  font-family: monospace;
+  text-align: justify;
+
+}
+
+.service h3{
+
+  font-weight: 700;
+  
+
+}
+
+.hover:hover{
+
+  cursor: pointer;
+}
+
+.contact h3{
+
+  font-weight: 700;
+
 
 }
