--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ html {
 
 .btn-contact {
 
-  background: linear-gradient(to right, #CC01FF , #00ffdd) !important;
+  background: #000 !important;
   border: 1px solid #000 !important;
   outline: none !important;
   color: #fff !important;
@@ -44,13 +44,11 @@ html {
 
 .btn-contact:hover {
 
-  
-  color: #000 !important;
+ 
   border: 1px solid #000 !important;
   
-
-
 }
+
 
 .box{
 
