--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,19 @@ header {
 }
 
 
+.modal-head h3{
+
+  font-weight: 700 !important;
+
+}
+
+.modal-head p{
+
+  font-weight: 400;
+  font-style: initial;
+
+}
+
 
 /* About */
 .about-head h3 {
